src/objects/MShClassroom__c.object
<CustomObject>
    <fields>
        <fullName>MShClassroomNumber__c</fullName>
        <label>MShClassroomNumber</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MShSchool__c</fullName>
        <label>MShSchool</label>
        <referenceTo>MShSchool__c</referenceTo>
        <relationshipLabel>MShClassrooms</relationshipLabel>
        <relationshipName>MShClassrooms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MShSpecificSObject__c</fullName>
        <label>MShSpecificSObject</label>
        <referenceTo>MShSpecificSObject__c</referenceTo>
        <relationshipLabel>MShClassrooms</relationshipLabel>
        <relationshipName>MShClassrooms</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>MShClassroom</label>
    <nameField>
        <label>MShClassroom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MShClassrooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>